syntax = "proto3";

import "messages.proto";
import "google/protobuf/empty.proto";

service Server{
  rpc Download(DownloadRequest) returns (DownloadResponse);
  rpc CreateSessionFolder(CreateSessionFolderRequest) returns (CreateSessionFolderResponse);
  rpc ListFiles(ListFilesRequest) returns (ListFilesResponse);
  rpc SendFileToClient(SendFileToClientRequest) returns (SendFileToClientResponse);
  rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
  rpc DeleteSession(DeleteSessionRequest) returns (DeleteSessionResponse);
  rpc UpgradeConnection(UpgradeRequest) returns (google.protobuf.Empty);
}

message UpgradeRequest{
  optional string oldSession = 1;
}